# magface

./: pyproject.toml
inference/: examples.ipynb  gen_feat.py  network_inf.py
inference/toy_imgs/: feat.list
