[tool.poetry]
    authors     = ["Lucas Parzianello <lucaspar@users.noreply.github.com>"]
    description = "Demo with MagFace"
    license     = "MIT"
    name        = "magface-demo"
    readme      = "README.md"
    version     = "0.1.0"

    [tool.poetry.dependencies]
        ipykernel     = "^6.15.2"
        ipywidgets    = "^8.0.2"
        matplotlib    = "^3.5.3"
        numpy         = "^1.23.3"
        opencv-python = "^4.6.0.66"
        python        = "^3.10"
        seaborn       = "^0.12.0"
    loguru = "^0.6.0"
    Flask = "^2.2.2"
    SQLAlchemy = "^1.4.41"
    Flask-SQLAlchemy = "^2.5.1"
    requests = "^2.28.1"
    torch = "^1.12.1"
    tqdm = "^4.64.1"
    termcolor = "^2.0.1"
    torchvision = "^0.13.1"
    nbpreview = "^0.9.1"


    [tool.poetry.group.dev.dependencies]
        black = "^22.8.0"
        isort = "^5.10.1"

[build-system]
    build-backend = "poetry.core.masonry.api"
    requires      = ["poetry-core"]
